environments/kubernetes/overlays/prod/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: HOMEPAGE_ALLOWED_HOSTS
              value: homepage.simonbrundin.com
          image: ghcr.io/gethomepage/homepage:latest
          imagePullPolicy: Always
          name: homepage
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config/bookmarks.yaml
              name: homepage-config
              subPath: bookmarks.yaml
            - mountPath: /app/config/services.yaml
              name: homepage-config
              subPath: services.yaml
            - mountPath: /app/config/widgets.yaml
              name: homepage-config
              subPath: widgets.yaml
            - mountPath: /app/config/logs
              name: logs
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      serviceAccountName: homepage
      volumes:
        - configMap:
            name: homepage
          name: homepage-config
        - emptyDir: {}
          name: logs
