environments/kubernetes/overlays/prod/homepage/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-route
  namespace: homepage
spec:
  parentRefs:
    - name: simons-gateway
      namespace: envoy
  hostnames:
    - "homepage.simonbrundin.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homepage
          port: 8200
          weight: 1
          namespace: homepage
      matches:
        - path:
            type: PathPrefix
            value: /
